@@ -82,6 +82,30 @@ used."
 		 (const   :tag "Use the width of the window" nil))
   :group 'shr)
 
+(defface shr-tag-h1 '((t (:bold t :height 2.2)))
+  "Face used for H1 tags."
+  :group 'shr)
+
+(defface shr-tag-h2 '((t (:bold t :height 2.0)))
+  "Face used for H2 tags."
+  :group 'shr)
+
+(defface shr-tag-h3 '((t (:bold t :height 1.8)))
+  "Face used for H3 tags."
+  :group 'shr)
+
+(defface shr-tag-h4 '((t (:bold t :height 1.6)))
+  "Face used for H4 tags."
+  :group 'shr)
+
+(defface shr-tag-h5 '((t (:bold t :height 1.4)))
+  "Face used for H5 tags."
+  :group 'shr)
+
+(defface shr-tag-h6 '((t (:bold t :height 1.2)))
+  "Face used for H6 tags."
+  :group 'shr)
+
 (defvar shr-content-function nil
   "If bound, this should be a function that will return the content.
 This is used for cid: URLs, and the function is called with the
@@ -832,22 +856,22 @@ ones, in case fg and bg are nil."
   (shr-generic cont))
 
 (defun shr-tag-h1 (cont)
-  (shr-heading cont 'bold 'underline))
+  (shr-heading cont 'shr-tag-h1))
 
 (defun shr-tag-h2 (cont)
-  (shr-heading cont 'bold))
+  (shr-heading cont 'shr-tag-h2))
 
 (defun shr-tag-h3 (cont)
-  (shr-heading cont 'italic))
+  (shr-heading cont 'shr-tag-h3))
 
 (defun shr-tag-h4 (cont)
-  (shr-heading cont))
+  (shr-heading cont 'shr-tag-h4))
 
 (defun shr-tag-h5 (cont)
-  (shr-heading cont))
+  (shr-heading cont 'shr-tag-h5))
 
 (defun shr-tag-h6 (cont)
-  (shr-heading cont))
+  (shr-heading cont 'shr-tag-h6))
 
 (defun shr-tag-hr (cont)
   (shr-ensure-newline)
